# propertyware_automation

./: .env.example  .gitattributes  .gitignore  main.py  pw_common.py  pyproject.backup.toml  pyproject.toml  requirements.txt  rxtract.py  step1_login.py  step2_headers.py  step3_rows_sample.py  step4_opening_url.py  step5_generate_notices.py  step5_other_details.py  step6_generate.py  tempCodeRunnerFile.py
propertyware_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pw_auto/: launch_ui.py  orchestrator.py  pw_common.py  ui_app.py
steps/: step1_login.py  step2_headers.py  step3_rows_sample.py  step4_opening_url.py  step6_generate.py
